# news-telegram-to-web

django_telegram_news/: manage.py  pyproject.toml
django_telegram_news/django_telegram/: apps.py  bot.py  data.json  my_bot.session  my_bot.session-journal  views.py
django_telegram_news/django_telegram/templates/: news.html
django_telegram_news/django_telegram_news/: asgi.py  settings.py  urls.py  wsgi.py
